--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="container flex-header">
             <nav class="nav">
                 <a class="logo link" href="./index.html">Web<span class="span-color">Studio</span></a>
+
                 <ul class="site-nav list">
                     <li class="item">
                         <a href="./index.html" class="link link-decor current">Studio</a>
@@ -33,19 +34,24 @@
                 </ul>
             </nav>
             <address class="address">
-                <ul class="auth-nav list">
+                <ul class="address-nav list">
                     <li class="item">
-                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="link email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="link phone-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
+            <button class="header-button menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="icon-menu" width="32" height="22">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
     </header>
     <main>
-        <section class="hero">
+        <!-- <section class="hero">
             <div class="container center">
                 <h1 class="section-title-block">
                     Effective Solutions for Your Business
@@ -54,8 +60,8 @@
                     Order Service
                 </button>
             </div>
-        </section>
-        <section class="section section-strategy">
+        </section> -->
+        <!-- <section class="section section-strategy">
             <div class="container">
                 <h2 class="visually-hidden">Strategies of the company</h2>
                 <ul class="list strategy-block">
@@ -109,8 +115,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="section actions">
+        </section> -->
+        <!-- <section class="section actions">
             <div class="container">
                 <h2 class="section-title actions-title">What are we doing</h2>
                 <ul class="list actions-list">
@@ -125,8 +131,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="section team-block">
+        </section> -->
+        <!-- <section class="section team-block">
             <div class="container">
                 <h2 class="section-title team-section-title">Our Team</h2>
                 <ul class="crew list">
@@ -280,8 +286,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="section customers-section">
+        </section> -->
+        <!-- <section class="section customers-section">
             <div class="container">
                 <h2 class="section-title">Customers</h2>
                 <ul class="list customers">
@@ -329,9 +335,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-container">
             <div class="info-block">
                 <a class="logo link logo-footer" href="./index.html">Web<span
@@ -390,9 +396,9 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- modal window on page index -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="icon" width="8" height="8">
@@ -456,7 +462,76 @@
                 <button class="submit_button" type="submit">Send</button>
             </form>
         </div>
+    </div> -->
+
+    <!-- mobile-menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu modal-btn" type="button">
+            <svg class="menu-toggle-icon" width="8" height="8">
+                <use href="./images/icons.svg#close-x"></use>
+            </svg>
+        </button>
+
+        <ul class="site-nav-mobile-menu list ">
+            <li class="item">
+                <a href="./index.html" class="link link-decor">Studio</a>
+            </li>
+            <li class="item">
+                <a href="./portfolio.html" class="link link-decor current">Portfolio</a>
+            </li>
+            <li class="item">
+                <a href="" class="link link-decor">Contacts</a>
+            </li>
+        </ul>
+        <address class="address-mobile-menu">
+            <ul class="address-nav list">
+                <li class="item">
+                    <a class="link phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+                <li class="item">
+                    <a class="link email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+
+            </ul>
+        </address>
+        <ul class="list social-icons-block-mobile-menu">
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
     </div>
+
+    <!-- scripts -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 
