--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,8 @@
     <header class="header">
         <div class="container flex-header">
             <nav class="nav">
-                <a class="logo link" href="./index.html">Web<span class="studio-color">Studio</span></a>
+                <a class="logo link" href="./index.html">Web<span class="span-color">Studio</span></a>
+
                 <ul class="site-nav list">
                     <li class="item">
                         <a href="./index.html" class="link link-decor">Studio</a>
@@ -33,15 +34,20 @@
                 </ul>
             </nav>
             <address class="address">
-                <ul class="auth-nav list">
+                <ul class="address-nav list">
                     <li class="item">
-                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="link email-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="item">
-                        <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="link phone-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
+            <button class="header-button menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="icon-menu" width="32" height="22">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
     </header>
     <main>
@@ -262,7 +268,8 @@
                         <input class="subscribe-form-input" name="subscribe-form-input" id="subscribe-form-input"
                             type="email" placeholder="E-mail" required minlength="3" maxlength="30" />
                     </label>
-                    <button class="subscribe-button" type="submit">Subscribe
+                    <button class="subscribe-button" type="submit">
+                        Subscribe
                         <svg class="subscribe-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
@@ -272,7 +279,75 @@
         </div>
     </footer>
 
-    <script src="./js/modal.js"></script>
+    <!-- mobile-menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu modal-btn" type="button">
+            <svg class="menu-toggle-icon" width="8" height="8">
+                <use href="./images/icons.svg#close-x"></use>
+            </svg>
+        </button>
+
+        <ul class="site-nav-mobile-menu list ">
+            <li class="item">
+                <a href="./index.html" class="link link-decor">Studio</a>
+            </li>
+            <li class="item">
+                <a href="./portfolio.html" class="link link-decor current">Portfolio</a>
+            </li>
+            <li class="item">
+                <a href="" class="link link-decor">Contacts</a>
+            </li>
+        </ul>
+        <address class="address-mobile-menu">
+            <ul class="address-nav list">
+                <li class="item">
+                    <a class="link phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+                <li class="item">
+                    <a class="link email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+
+            </ul>
+        </address>
+        <ul class="list social-icons-block-mobile-menu">
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item">
+                <a href="" class="icon-wrap-footer">
+                    <svg class="icon-footer" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+    <!-- scripts -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
+
 </body>
 
 </html>
