--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </button>
             </div>
         </section> -->
-        <!-- <section class="section section-strategy">
+        <section class="section section-strategy">
             <div class="container">
                 <h2 class="visually-hidden">Strategies of the company</h2>
                 <ul class="list strategy-block">
@@ -115,7 +115,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!-- <section class="section actions">
             <div class="container">
                 <h2 class="section-title actions-title">What are we doing</h2>
