--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 </ul>
             </div>
         </section>
-        <!-- <section class="section customers-section">
+        <section class="section customers-section">
             <div class="container">
                 <h2 class="section-title">Customers</h2>
                 <ul class="list customers">
@@ -335,7 +335,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
     <!-- <footer class="footer">
         <div class="container footer-container">
