--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </header>
     <main>
-        <!-- <section class="hero">
+        <section class="hero">
             <div class="container center">
                 <h1 class="section-title-block">
                     Effective Solutions for Your Business
@@ -60,7 +60,7 @@
                     Order Service
                 </button>
             </div>
-        </section> -->
+        </section>
         <section class="section section-strategy">
             <div class="container">
                 <h2 class="visually-hidden">Strategies of the company</h2>
