--- a/index.html
+++ b/index.html
@@ -77,18 +77,7 @@
                             the perfect and creative solution.
                         </p>
                     </li>
-                    <li class="item">
-                        <div class="icon-wrap">
-                            <svg class="item-icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-astronaut"></use>
-                            </svg>
-                        </div>
-                        <h3 class="title">Punctuality</h3>
-                        <p class="description">
-                            Bring the key message to the brand's audience for the best price
-                            within the shortest possible time.
-                        </p>
-                    </li>
+
                     <li class="item">
                         <div class="icon-wrap">
                             <svg class="item-icon" width="64" height="64">
@@ -111,6 +100,18 @@
                         <p class="description">
                             Design practice focused on digital experiences. We bring forth a
                             deep passion for problem-solving.
+                        </p>
+                    </li>
+                    <li class="item">
+                        <div class="icon-wrap">
+                            <svg class="item-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
+                        <h3 class="title">Punctuality</h3>
+                        <p class="description">
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
                         </p>
                     </li>
                 </ul>
@@ -142,13 +143,7 @@
                             <h3 class="name">Mark Guerrero</h3>
                             <p class="job">Product Designer</p>
                             <ul class="list icons-block">
-                                <li class="social-network">
-                                    <a href="" class="icon-wrap">
-                                        <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
+
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
@@ -159,14 +154,21 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-network">
+                                    <a href="" class="icon-wrap">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -182,13 +184,6 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="social-network">
-                                    <a href="" class="icon-wrap">
-                                        <svg class="social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -196,14 +191,21 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-network">
+                                    <a href="" class="icon-wrap">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -219,13 +221,6 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="social-network">
-                                    <a href="" class="icon-wrap">
-                                        <svg class="social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -233,14 +228,21 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-network">
+                                    <a href="" class="icon-wrap">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -256,13 +258,6 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="social-network">
-                                    <a href="" class="icon-wrap">
-                                        <svg class="social-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
@@ -270,14 +265,21 @@
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-network">
                                     <a href="" class="icon-wrap">
                                         <svg class="social-icon" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-network">
+                                    <a href="" class="icon-wrap">
+                                        <svg class="social-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -337,49 +339,52 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
-        <div class="container footer-container">
-            <div class="info-block">
-                <a class="logo link logo-footer" href="./index.html">Web<span
-                        class="span-color-footer">Studio</span></a>
-                <p class="slogan">
-                    Increase the flow of customers and sales for your business with
-                    digital marketing & growth solutions.
-                </p>
+    <footer class="footer">
+        <div class="container wrapper-container-footer">
+            <div class="footer-container">
+                <div class="info-block">
+                    <a class="logo link logo-footer" href="./index.html">Web<span
+                            class="span-color-footer">Studio</span></a>
+                    <p class="slogan">
+                        Increase the flow of customers and sales for your business with
+                        digital marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="wrapper-footer">
+                    <p class="title">Social media</p>
+                    <ul class="list social-icons-block">
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="wrapper-footer">
-                <p class="title">Social media</p>
-                <ul class="list social-icons-block">
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
             <div class="form-container">
                 <p class="title">Subscribe</p>
                 <form class="subscribe-form">
@@ -396,9 +401,9 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <!-- modal window on page index -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-btn" data-modal-close>
                 <svg class="icon" width="8" height="8">
@@ -462,7 +467,7 @@
                 <button class="submit_button" type="submit">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <!-- mobile-menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
@@ -472,7 +477,7 @@
             </svg>
         </button>
 
-        <ul class="site-nav-mobile-menu list ">
+        <ul class="site-nav-mobile-menu list">
             <li class="item">
                 <a href="./index.html" class="link link-decor">Studio</a>
             </li>
@@ -491,40 +496,38 @@
                 <li class="item">
                     <a class="link email" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-
             </ul>
         </address>
         <ul class="list social-icons-block-mobile-menu">
-            <li class="item">
-                <a href="" class="icon-wrap-footer">
-                    <svg class="icon-footer" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="item">
-                <a href="" class="icon-wrap-footer">
-                    <svg class="icon-footer" width="24" height="24">
+            <li class="social-network">
+                <a href="" class="icon-wrap">
+                    <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="item">
-                <a href="" class="icon-wrap-footer">
-                    <svg class="icon-footer" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="item">
-                <a href="" class="icon-wrap-footer">
-                    <svg class="icon-footer" width="24" height="24">
+            <li class="social-network">
+                <a href="" class="icon-wrap">
+                    <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
+            <li class="social-network">
+                <a href="" class="icon-wrap">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-network">
+                <a href="" class="icon-wrap">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
         </ul>
-
     </div>
 
     <!-- scripts -->
