--- a/portfolio.html
+++ b/portfolio.html
@@ -218,7 +218,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-container">
             <div class="info-block">
                 <a class="logo link logo-footer" href="./index.html">Web<span
@@ -277,7 +277,7 @@
                 </form>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- mobile-menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
