image adaptation on a studio page is finished

--- a/index.html
+++ b/index.html
@@ -122,13 +122,16 @@
                 <h2 class="section-title actions-title">What are we doing</h2>
                 <ul class="list actions-list">
                     <li class="item">
-                        <img src="./images/phone.jpg" alt="Company does1" width="360" />
+                        <img srcset="./images/company_does/desktop.jpg 1x, ./images/company_does/desktop@2x.jpg 2x"
+                            src="./images/company_does/phone.jpg" alt="Company does1" width="360" />
                     </li>
                     <li class="item">
-                        <img src="./images/screens.jpg" alt="Company does2" width="360" />
+                        <img srcset="./images/company_does/screens.jpg 1x, ./images/company_does/screens@2x.jpg 2x"
+                            src="./images/company_does/screens.jpg" alt="Company does2" width="360" />
                     </li>
                     <li class="item">
-                        <img src="./images/desktop.jpg" alt="Company does3" width="360" />
+                        <img srcset="./images/company_does/phone.jpg 1x, ./images/company_does/phone@2x.jpg 2x"
+                            src="./images/company_does/desktop.jpg" alt="Company does3" width="360" />
                     </li>
                 </ul>
             </div>
@@ -138,7 +141,8 @@
                 <h2 class="section-title team-section-title">Our Team</h2>
                 <ul class="crew list">
                     <li class="person">
-                        <img src="./images/crue1.jpg" alt="stuff" width="264" />
+                        <img srcset="./images/team/crue1.jpg 1x, ./images/team/crue1@2x.jpg 2x"
+                            src="./images/team/crue1.jpg" alt="stuff" width="264" />
                         <div class="person-wrapper">
                             <h3 class="name">Mark Guerrero</h3>
                             <p class="job">Product Designer</p>
@@ -176,7 +180,8 @@
                         </div>
                     </li>
                     <li class="person">
-                        <img src="./images/crue2.jpg" alt="stuff" width="264" />
+                        <img srcset="./images/team/crue2.jpg 1x, ./images/team/crue2@2x.jpg 2x"
+                            src="./images/team/crue2.jpg" alt="stuff" width="264" />
                         <div class="person-wrapper">
                             <h3 class="name">Tom Ford</h3>
                             <p class="job">Frontend Developer</p>
@@ -213,7 +218,8 @@
                         </div>
                     </li>
                     <li class="person">
-                        <img src="./images/crue3.jpg" alt="stuff" width="264" />
+                        <img srcset="./images/team/crue3.jpg 1x, ./images/team/crue3@2x.jpg 2x"
+                            src="./images/team/crue3.jpg" alt="stuff" width="264" />
                         <div class="person-wrapper">
                             <h3 class="name">Camila Garcia</h3>
                             <p class="job">Marketing</p>
@@ -250,7 +256,8 @@
                         </div>
                     </li>
                     <li class="person">
-                        <img src="./images/crue4.jpg" alt="stuff" width="264" />
+                        <img srcset="./images/team/crue4.jpg 1x, ./images/team/crue4@2x.jpg 2x"
+                            src="./images/team/crue4.jpg" alt="stuff" width="264" />
                         <div class="person-wrapper">
                             <h3 class="name">Daniel Wilson</h3>
                             <p class="job">UI Designer</p>
