--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/banking.jpg" alt="Interface Concept" width="360" />
+                                <img srcset="./images/portfolio/banking.jpg 1x, ./images/portfolio/banking@2x.jpg 2x"
+                                    src="./images/portfolio/banking.jpg" alt="Interface Concept" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -89,7 +90,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" />
+                                <img srcset="./images/portfolio/cashless.jpg 1x, ./images/portfolio/cashless@2x.jpg 2x"
+                                    src="./images/portfolio/cashless.jpg" alt="Cashless Payment" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -105,7 +107,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/meditation.jpg" alt="Meditation App" width="360" />
+                                <img srcset="./images/portfolio/meditation.jpg 1x, ./images/portfolio/meditation@2x.jpg 2x"
+                                    src="./images/portfolio/meditation.jpg" alt="Meditation App" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -121,7 +124,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/taxi.jpg" alt="Taxi" width="360" />
+                                <img srcset="./images/portfolio/taxi.jpg 1x, ./images/portfolio/taxi@2x.jpg 2x"
+                                    src="./images/portfolio/taxi.jpg" alt="Taxi" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -137,7 +141,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/illustrations.jpg" alt="Screen Illustrations" width="360" />
+                                <img srcset="./images/portfolio/illustrations.jpg 1x, ./images/portfolio/illustrations@2x.jpg 2x"
+                                    src="./images/portfolio/illustrations.jpg" alt="Screen Illustrations" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -153,7 +158,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/courses.jpg" alt="Online Courses" width="360" />
+                                <img srcset="./images/portfolio/courses.jpg 1x, ./images/portfolio/courses@2x.jpg 2x"
+                                    src="./images/portfolio/courses.jpg" alt="Online Courses" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -169,7 +175,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/instagram.jpg" alt="Instagram Stories" width="360" />
+                                <img srcset="./images/portfolio/instagram.jpg 1x, ./images/portfolio/instagram@2x.jpg 2x"
+                                    src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -185,7 +192,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/food.jpg" alt="Organic Food" width="360" />
+                                <img srcset="./images/portfolio/food.jpg 1x, ./images/portfolio/food@2x.jpg 2x"
+                                    src="./images/portfolio/food.jpg" alt="Organic Food" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -201,7 +209,8 @@
                     <li class="portfolio-block">
                         <a class="link link-hover" href="">
                             <div class="overlay">
-                                <img src="./images/coffee.jpg" alt="Fresh Coffee" width="360" />
+                                <img srcset="./images/portfolio/coffee.jpg 1x, ./images/portfolio/coffee@2x.jpg 2x"
+                                    src="./images/portfolio/coffee.jpg" alt="Fresh Coffee" width="360" />
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
                                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
@@ -218,49 +227,52 @@
             </div>
         </section>
     </main>
-    <!-- <footer class="footer">
-        <div class="container footer-container">
-            <div class="info-block">
-                <a class="logo link logo-footer" href="./index.html">Web<span
-                        class="span-color-footer">Studio</span></a>
-                <p class="slogan">
-                    Increase the flow of customers and sales for your business with
-                    digital marketing & growth solutions.
-                </p>
+    <footer class="footer">
+        <div class="container wrapper-container-footer">
+            <div class="footer-container">
+                <div class="info-block">
+                    <a class="logo link logo-footer" href="./index.html">Web<span
+                            class="span-color-footer">Studio</span></a>
+                    <p class="slogan">
+                        Increase the flow of customers and sales for your business with
+                        digital marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="wrapper-footer">
+                    <p class="title">Social media</p>
+                    <ul class="list social-icons-block">
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-network">
+                            <a href="" class="icon-wrap-footer">
+                                <svg class="social-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="wrapper-footer">
-                <p class="title">Social media</p>
-                <ul class="list social-icons-block">
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="item">
-                        <a href="" class="icon-wrap-footer">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
             <div class="form-container">
                 <p class="title">Subscribe</p>
                 <form class="subscribe-form">
@@ -277,7 +289,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- mobile-menu -->
     <div class="menu-container js-menu-container" id="mobile-menu">
