--- a/portfolio.html
+++ b/portfolio.html
@@ -123,8 +123,8 @@
                                         srcset="./images/portfolio/phone/cashless-phone.jpg 1x, ./images/portfolio/phone/cashless-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/cashless.jpg" alt="Cashless payment"
-                                        width="360" />
+                                    <img srcset="" src="./images/portfolio/desktop/cashless-desktop.jpg"
+                                        alt="Cashless payment" width="360" />
                                 </picture>
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -157,7 +157,7 @@
                                         srcset="./images/portfolio/phone/meditation-phone.jpg 1x, ./images/portfolio/phone/meditation-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/meditation.jpg"
+                                    <img srcset="" src="./images/portfolio/desktop/meditation-desktop.jpg"
                                         alt="Meditation options" width="360" />
                                 </picture>
                                 <p class="overlay-text">
@@ -191,8 +191,8 @@
                                         srcset="./images/portfolio/phone/taxi-phone.jpg 1x, ./images/portfolio/phone/taxi-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/taxi.jpg" alt="Moving options"
-                                        width="360" />
+                                    <img srcset="" src="./images/portfolio/desktop/taxi-desktop.jpg"
+                                        alt="Moving options" width="360" />
                                 </picture>
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -225,7 +225,7 @@
                                         srcset="./images/portfolio/phone/illustrations-phone.jpg 1x, ./images/portfolio/phone/illustrations-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/illustrations.jpg"
+                                    <img srcset="" src="./images/portfolio/desktop/illustrations-desktop.jpg"
                                         alt="Screen Illustrations" width="360" />
                                 </picture>
                                 <p class="overlay-text">
@@ -259,8 +259,8 @@
                                         srcset="./images/portfolio/phone/courses-phone.jpg 1x, ./images/portfolio/phone/courses-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/courses.jpg" alt="Online Courses"
-                                        width="360" />
+                                    <img srcset="" src="./images/portfolio/desktop/courses-desktop.jpg"
+                                        alt="Online Courses" width="360" />
                                 </picture>
 
                                 <p class="overlay-text">
@@ -294,7 +294,7 @@
                                         srcset="./images/portfolio/phone/instagram-phone.jpg 1x, ./images/portfolio/phone/instagram-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/instagram.jpg"
+                                    <img srcset="" src="./images/portfolio/desktop/instagram-desktop.jpg"
                                         alt="Instagram Stories" width="360" />
                                 </picture>
                                 <p class="overlay-text">
@@ -328,7 +328,7 @@
                                         srcset="./images/portfolio/phone/food-phone.jpg 1x, ./images/portfolio/phone/food-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/food.jpg" alt="Organic Food"
+                                    <img srcset="" src="./images/portfolio/desktop/food-desktop.jpg" alt="Organic Food"
                                         width="360" />
                                 </picture>
                                 <p class="overlay-text">
@@ -362,8 +362,8 @@
                                         srcset="./images/portfolio/phone/coffee-phone.jpg 1x, ./images/portfolio/phone/coffee-phone@2x.jpg 2x"
                                         width="396" />
 
-                                    <img srcset="" src="./images/portfolio/desktop/coffee.jpg" alt="Fresh Coffee"
-                                        width="360" />
+                                    <img srcset="" src="./images/portfolio/desktop/coffee-desktop.jpg"
+                                        alt="Fresh Coffee" width="360" />
                                 </picture>
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task
